--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
         </div>
         <div class="about-us">
-            
+
+        </div>
+        <div class="what-we-do">
+
         </div>
     </body>
 </html>
