created a div for the services page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <div class="about-us">
 
         </div>
+        <div class="services">
+
+        </div>
         <div class="what-we-do">
 
         </div>
+
     </body>
 </html>
