created a div for the socials page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="contact-us">
 
         </div>
+        <div class="socials">
+            
+        </div>
 
     </body>
 </html>
