--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <div class="home">
+            <img src="images/logo/logo.png" alt="">
+            <h1>WELCOME</h1>
+            <h1>TO DELANI STUDIO</h1>
+            <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
+            <img src="images/mouse_click.png" alt="">
 
         </div>
         <div class="about-us">
@@ -20,7 +25,7 @@
 
         </div>
         <div class="socials">
-            
+
         </div>
 
     </body>
