--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
         </div>
         <div class="about-us">
+            <h2>ABOUT US</h2>
+            <p>When you work with us, you are part of a team of commited collaborators.
+                 All aspects of our software development process are intergrated, interactive and agile.</p>
+            <p>Our approach unifies design, development and product management to create exceptional products.</p>
+            <p>We start each project by understanding your business goals, teh user's needs and product requirements.</p>
+            <p>Then we help translate them into effective and elegant solutions.</p>
 
         </div>
         <div class="services">
