--- a/index.html
+++ b/index.html
@@ -22,13 +22,57 @@
 
         </div>
         <div class="services">
-            <h2>Services</h2>
+            <h2>SERVICES</h2>
             <p>Before we sign a contract or write a line of code our team will spend the neccessary time needed to understand your product vision.</p>
             <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
             <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
 
         </div>
         <div class="what-we-do">
+            <h2>WHAT WE DO</h2>
+            <div class="service_icons">
+                <img src="images/services_icons/design_icon.png" alt="">
+                <img src="images/services_icons/dev_icon.png" alt="">
+                <img src="images/services_icons/product_icon.png" alt="">
+            </div>
+            <div class="container">
+                <h3>PORTFOLIO</h3>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work4.jpg" alt="">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work3.jpg" alt="">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work2.jpg" alt="">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work1.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work5.jpg" alt="">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work6.jpg" alt="">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work7.jpg" alt="">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="images/portfolio/work8.jpg" alt="">
+                    </div>
+                </div>
+            </div>
 
         </div>
         <div class="contact-us">
