added elements and info to div class contact-us

--- a/index.html
+++ b/index.html
@@ -90,6 +90,26 @@
 
         </div>
         <div class="contact-us">
+            <h2>CONTACT US</h2>
+            <div class="container" id="container">
+                <form>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" name="name" id="name" placeholder="Name...">   
+                        </div>
+                        <div class="col-md-6">
+                            <input type="email" name="email" id="email" placeholder="Email...">
+                        </div>
+                    </div>
+                    <div class="row" id="row-message">
+                        <textarea name="message" id="message" placeholder="Your message here..."></textarea>
+                    </div>
+                    <div class="row">
+                        <button type="submit" id="button">Send</button>
+                    
+                    </div>
+                </form>
+            </div>
 
         </div>
         <div class="socials">
