--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
         </div>
         <div class="socials">
 
+            <div class="social-icons">
+                <img src="images/social_icons/twitter.png" alt="">
+                <img src="images/social_icons/dribble.png" alt="">
+                <img src="images/social_icons/facebook.png" alt="">
+                <img src="images/social_icons/g_plus.png" alt="">
+                <img src="images/social_icons/skype.png" alt="">
+                <img src="images/social_icons/stumble_upon.png" alt="">
+                <img src="images/social_icons/behance.png" alt="">
+                <img src="images/social_icons/pinterest.png" alt="">
+                <img src="images/social_icons/flickr.png" alt="">
+            </div>
+            
+            <p>DELANI STUDIO <br>2019</p>
+            
+
+
         </div>
 
     </body>
