--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Delani Studio</title>
+        <link href="https://fonts.googleapis.com/css?family=Lacquer|Simonetta|Indie+Flower&display=swap" rel="stylesheet">
+        
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
     </head>
@@ -17,9 +19,9 @@
         <div class="about-us">
             <h2>ABOUT US</h2>
             <p>When you work with us, you are part of a team of commited collaborators.
-                 All aspects of our software development process are intergrated, interactive and agile.</p>
+                 All aspects of our software development process are intergrated, interactive <br>and agile.</p>
             <p>Our approach unifies design, development and product management to create exceptional products.</p>
-            <p>We start each project by understanding your business goals, teh user's needs and product requirements.</p>
+            <p>We start each project by understanding your business goals, the user's needs and product requirements.</p>
             <p>Then we help translate them into effective and elegant solutions.</p>
 
         </div>
